--- a/website/requirements.txt
+++ b/website/requirements.txt
@@ -1,6 +1,23 @@
 Django==1.8.2
-pinax-theme-bootstrap==5.7.6
+Markdown==2.3.1
+Pillow==2.9.0
+django-appconf==1.0.1
+django-bootstrap-form==3.2
+django-jsonfield==0.9.13
+django-markitup==1.0.0
+django-markup==0.4
+django-model-utils==2.3.1
+django-reversion==1.8.7
+django-taggit==0.16.2
+django-timezones==0.2
 django-user-accounts==1.1
 metron==1.3.5
 pinax-eventlog==1.0.0
-django-jsonfield==0.9.13
+pinax-theme-bootstrap==5.7.6
+psycopg2==2.6.1
+pygeoip==0.2.5
+pytz==2015.4
+six==1.9.0
+symposion==1.0b2.dev1
+timezones==1.8.2
+wsgiref==0.1.2
