--- a/static/package.json
+++ b/static/package.json
@@ -15,10 +15,13 @@
     "gulp-awspublish": "^2.0.0",
     "gulp-awspublish-router": "^0.1.1",
     "gulp-bytediff": "^0.2.1",
+    "gulp-coffee": "^2.3.1",
     "gulp-coffeelint": "^0.4.0",
+    "gulp-concat": "^2.6.0",
     "gulp-if-else": "^1.0.3",
     "gulp-image-optimization": "^0.1.3",
     "gulp-jade": "^1.0.0",
+    "gulp-minify": "0.0.5",
     "gulp-minify-css": "^1.1.1",
     "gulp-plumber": "^1.0.0",
     "gulp-rev": "^3.0.1",
