--- a/static/package.json
+++ b/static/package.json
@@ -33,6 +33,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "lazypipe": "^0.2.3",
+    "marked": "^0.3.5",
     "run-sequence": "^1.1.0",
     "yargs": "^3.8.0"
   }
