--- a/static/package.json
+++ b/static/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "browser-sync": "^2.7.1",
     "coffee-script": "^1.9.2",
+    "del": "^2.0.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-awspublish": "^2.0.0",
@@ -26,7 +27,6 @@
     "gulp-plumber": "^1.0.0",
     "gulp-rev": "^3.0.1",
     "gulp-rev-collector": "^0.1.4",
-    "gulp-rimraf": "^0.1.1",
     "gulp-s3": "^0.3.0",
     "gulp-sass": "^2.0.0",
     "gulp-scss-lint": "^0.1.12",
