--- a/static/.scss-lint.yml
+++ b/static/.scss-lint.yml
@@ -111,7 +111,7 @@ linters:
 
   StringQuotes:
     enabled: true
-    style: single_quotes # or double_quotes
+    style: double_quotes
 
   TrailingSemicolonAfterPropertyValue:
     enabled: true
