--- a/static/package.json
+++ b/static/package.json
@@ -27,6 +27,7 @@
     "gulp-plumber": "^1.0.0",
     "gulp-rev": "^3.0.1",
     "gulp-rev-collector": "^0.1.4",
+    "gulp-rev-replace": "^0.4.2",
     "gulp-s3": "^0.3.0",
     "gulp-sass": "^2.0.0",
     "gulp-scss-lint": "^0.1.12",
